Level selector out of reach because 100vh 100vw includes things like addressbar and scrollbars, this fixes #282

--- a/src/c3nav/site/static/site/css/c3nav.scss
+++ b/src/c3nav/site/static/site/css/c3nav.scss
@@ -51,13 +51,18 @@
     color: white;
 }
 
+html {
+    width: 100%;
+    height: 100%;
+}
+
 body {
     font-weight: normal;
     display: flex;
     flex-direction: column;
     align-items: stretch;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
 }
 
 
